[package]
name = "activities-indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

[lib]
proc-macro = true

[dependencies]
#actix = "=0.11.0-beta.2"
actix = "=0.13.0"
actix-rt = "2.2.0"
#actix_derive="^0.6.0-beta.1"
anyhow = "1.0.51"
#base64 = "0.11"
bigdecimal = { version = "0.2", features = ["serde"] }
cached = "0.23.0"
clap = { version = "3.0.0-beta.5", features = ["color", "derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.5"
#hex = "0.4"
#http="0.2.7"
#itertools = "0.9.0"
num-traits = "0.2.11"
openssl-probe = { version = "0.1.2" }
#serde = { version = "1", features = ["derive"] }
#serde_json = "1.0.55"
sqlx = { version = "0.5.13", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "json"] }
syn = "1.0.90"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.34"
tracing-subscriber = "0.2.4"
quote = "1.0.17"

near-indexer-primitives = "0.12.0"
near-lake-framework = { git = "https://github.com/near/near-lake-framework", rev = "04dddb290a9dc027b2ddf2f58b376e61652022aa" }
near-client = { git = "https://github.com/near/nearcore", rev = "c7eaf26ba3e934a1ee76af2d2ac4266fa276d28c" }
