[package]
name = "activities-indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

[lib]
proc-macro = true

[dependencies]
actix = "=0.11.0-beta.2"
actix-rt = "=2.2.0"  # remove it once actix is upgraded to 0.11+ and all near dependencies are upgraded
actix-web = "=4.0.0-beta.6"
actix-http = "=3.0.0-beta.6"
actix-tls = "=3.0.0-beta.5"
actix_derive = "=0.6.0-beta.1"
anyhow = "1.0.51"
bigdecimal = { version = "0.2", features = ["serde"] }
cached = "0.23.0"
clap = { version = "3.1.18", features = ["color", "derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.5"
num-traits = "0.2.11"
sqlx = { version = "0.5.13", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "json"] }
syn = "1.0.90"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.34"
tracing-subscriber = "0.2.4"
quote = "1.0.17"

near-indexer-primitives = "0.12.0"
near-jsonrpc-primitives = "0.12.0"
near-jsonrpc-client = "0.3.0"
near-lake-framework = "0.3.0"
